css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');

* {
    color: rgb(218, 231, 242);
    border: none;

    line-height: 1.5;
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;

    overflow: hidden;

    /* annoying when misclick dragging the mouse */
    user-select: none;

    font-family: "Teko", sans-serif;
}
#root-container{
    height: 100vh;
    width: 100vw;

    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: auto auto;

    background-color: #03191e;
}

/* main */
.main-container{

    grid-row: 1;
    grid-column: 1;

    max-height: 100vh;
    width: 85vw;
    
    display: grid;
    grid-template-rows: auto 1fr;
    grid-template-columns: 1fr;

    align-content: center;
    justify-content: center;

    justify-items: center;
}

/* nav */
.main-container .nav{
    width: 100%;
    height: 100%;
    grid-row: 1;
    grid-column: 1;

    display: grid;
    grid-template-columns: 4fr 3fr 4fr;
    grid-template-rows: 1fr;

    background-color: #03191e;;
}
.nav *{
    align-self: center;
    justify-self: center;

    text-align: center;

    text-decoration: none;
    background-color: #03191e;;

    border: none;
}
.nav h1{
    grid-column: 2;
    cursor: pointer;

    font-size: 54px;

    align-self: end;
    text-align: end;
}
.nav span{
    font-size: 60px;
}
.nav *:hover{
    color: rgb(56, 174, 244)
    
}


/* commiting sudoku */
.sudoku-board{
    width: 85vh;
    height: 80vh;

    align-self: center;

    grid-row: 2;
    grid-column: 1;

    display: grid;

    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;

    outline: 3px solid rgb(132, 158, 162);
    z-index: 2;

    background-color: #03191e;
}

.sudoku-subboard{
    width: 100%;
    height: 100%;

    display: grid;

    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;

    outline: 3px solid rgb(132, 158, 162);

    border-radius: 4px;
}
span{
    font-family: 'Roboto Mono', monospace;

    height:100%;
    width: 100%;

    line-height: normal;

    font-size: 32px;
    font-weight: 500;

    text-align: center;
    text-justify: center;
    align-self: center;
    justify-self: center;

    color: #dde9f0;

    border: 1px solid rgb(72, 96, 95);

    background-color: rgb(6, 48, 58);
}
.hoverable{
    cursor: pointer;

    /* display: block;
    overflow: scroll; */
}
.hoverable:active{
    background-color: #062a32;
}

/* winning sudoku */
.winning-container{
    width: 85vh;
    height: 80vh;

    align-self: center;

    grid-row: 2;
    grid-column: 1;

    display: grid;

    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto auto 1fr;

    align-items: center;
    justify-items: center;
}
.winning-container h1{
    font-size: 60px;
    animation: glow 2s ease-in-out infinite alternate;
}

@keyframes glow {
    from {
      text-shadow: 0 0 10px #a5a5a5;
    }
    to {
      text-shadow: 0 0 10px #ff0000, 0 0 4px #ff0000;
    }
}

/* right part */
.right-side{

    max-height: 100vh;
    width: 15vw;

    grid-row: 1;
    grid-column: 2;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 4fr 2fr; 

    background-color: #03191e;;
}
.right-side button{
    outline: 2px solid rgb(132, 158, 162);
    background-color: rgb(6, 48, 58);

    width: 50%;
    max-width: 54px;
    height: 24px;
    font-size: 18px;

    align-self: center;
    justify-self: center;

    text-align: center;
    text-justify: center;

    cursor: pointer;
}
.right-side button:hover, .right-side a:hover{
    color: rgb(56, 174, 244)
}
.right-side a{
    text-align: center;
    font-size: 18px;
    height: 24px;
}


img{
    filter: contrast(50%);
}
@media screen and (max-width: 1080px){
    .nav h1{
        font-size: 40px;
    }
    .nav span{
        font-size: 40px;
    }

    span{
        font-size: 30px;
        font-weight: 600;
    }
    .sudoku-board{
        width: 400px;
        height: 400px;
    }
}

@media screen and (max-width: 768px){
    .nav h1{
        font-size: 30px;
    }
    .nav span{
        font-size: 30px;
    }
    span{
        font-size: 30px;
        font-weight: 500;
    }

    .right-side button{
        height: 16px;
        font-size: 12px;
        width: 40px;
    }

    .right-side button, .right-side a{
        height: 16px;
        font-size: 12px;
    }
}

@media screen and (max-width: 550px){
    #root-container{
        grid-template-rows: 1fr auto;
        grid-template-columns: 1fr;
    }
    .main-container{
        width: 100%;
    }
    .nav h1{
        font-size: 22px;
    }
    .nav span{
        font-size: 22px;
    }

    span{
        font-size: 18px;
    }

    .sudoku-board{
        width: 250px;
        height: 250px;
    }

    .right-side{
        grid-row: 2;
        grid-column: 1;
        width: 100%;
    }
    .right-side *{
        width: 50%;
        margin: 2px;
        padding: 0px;
        background-color: #00000000;
    }
    .right-side a{
        display: none;
    }
}

